<resources>
    <string name="app_name">LitePal</string>
    <string name="username_show">用户名:</string>
    <string name="username_hint">请输入你的用户名</string>
    <string name="password_show">密码:</string>
    <string name="password_text">请输入你的密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="exit">退出</string>
    <string name="update_button">修改</string>
    <string name="delete_button">注销</string>
</resources>
